# citationLinker

./: .config  .gitignore  README.md  articleBreaks.txt  citationLinker.py  multiArticle.py  multiFile.py  pyproject.toml  requirements.txt
src/: bibliographyFinder.py  configLoad.py  debugUtils.py  inParenthesesExtractor.py  referenceConnector.py  textScreener.py  utils.py
src/citation_linker/: bibliographyFinder.py  citationConfig.py  citationLinker.py  configLoad.py  configPaths.py  debugUtils.py  inParenthesesExtractor.py  multiArticle.py  multiFile.py  referenceConnector.py  textScreener.py
src/citation_linker/data/: default.config
